# mcp-over-mqtt-cpp-sdk

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
cmake/: mcp_mqtt_serverConfig.cmake.in
examples/: CMakeLists.txt  simple_server.cpp
include/: mcp_mqtt.h
include/mcp_mqtt/: json_rpc.h  logger.h  mcp_server.h  mqtt_interface.h  tool_manager.h  types.h
src/: json_rpc.cpp  mcp_server.cpp  tool_manager.cpp
